Support setting rerun attribute for feature/scenario